# virginia

./: .gitignore  README.md  latest.json  package-lock.json  package.json
apps/desktop/: bundler.js  entitlements.plist  forge.config.cts  package-lock.json  package.json  tsconfig.json
apps/desktop/assets/: appicon.icns
apps/desktop/src/: main.ts
apps/server/: dev.db  knexfile.js  package.json  tsconfig.json
apps/server/prisma/: dev.db  dev.db-journal  schema.prisma
apps/server/src/: client.ts  config.ts  db.ts  index.ts  log.ts  migrate.ts  rpc.ts  schema.ts  server.ts  start.ts
apps/server/src/adapters/: bluesky.ts  index.ts  patreon.ts  rss.ts  wikipedia.ts  youtube.ts
apps/server/src/middleware/: frontend.ts  sse.ts
apps/server/src/migrations/: 20250214013438_init.ts
apps/server/src/routers/: rpc.ts
apps/server/src/schedulers/: RefreshScheduler.ts
apps/server/src/services/: RefreshAll.ts  RefreshFeed.ts  RefreshSource.ts
apps/server/utils/: hash.ts  ids.ts
apps/tray/: package-lock.json  package.json
apps/tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/tray/src-tauri/assets/icons/: icon.icns
apps/tray/src-tauri/icons/: icon.icns
apps/tray/src-tauri/src/: lib.rs
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  index.css  rpc.ts
apps/web/src/components/: AddCategoryForm.tsx  CategoriesSelector.tsx  EmojiCheckbox.tsx  EmojiInput.tsx  Feed.tsx  FeedDefinitionInput.tsx  FeedForm.tsx  LiveProvider.tsx  Sidebar.tsx  SourceCard.tsx  SourceInput.tsx  (+2 more)
scripts/: generate-icons.sh  package-release.sh
(+29 files in other folders)
